[gd_scene load_steps=5 format=3 uid="uid://ptkseutwb6ke"]

[ext_resource type="Script" path="res://UI/dialogue/dialogue.gd" id="1_jww1s"]
[ext_resource type="Theme" uid="uid://c3gfwu5jojd" path="res://UI/dialogue/Dialogue_theme.tres" id="3_l0jdm"]
[ext_resource type="Texture2D" uid="uid://cimtoxdlhn7gc" path="res://assets/bitmaps/nobody.png" id="5_1moy0"]
[ext_resource type="Script" path="res://UI/dialogue/grab_focus.gd" id="6_b8ddn"]

[node name="Dialogue" type="Control" node_paths=PackedStringArray("llm_output", "llm_input")]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -152.0
offset_right = 217.0
offset_bottom = 35.0
grow_vertical = 0
script = ExtResource("1_jww1s")
llm_output = NodePath("Answer/MarginContainer/llm_output")
llm_input = NodePath("HBoxContainer/Question/llm_input")

[node name="Character" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -333.0
offset_right = 201.0
offset_bottom = -112.0
grow_vertical = 0
texture = ExtResource("5_1moy0")

[node name="Answer" type="PanelContainer" parent="."]
modulate = Color(0.664994, 0.784735, 0.758541, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 1.0
offset_right = 577.0
offset_bottom = -61.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_l0jdm")

[node name="MarginContainer" type="MarginContainer" parent="Answer"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="llm_output" type="RichTextLabel" parent="Answer/MarginContainer"]
layout_mode = 2
theme = ExtResource("3_l0jdm")
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. "

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 16.0
offset_top = 132.0
offset_right = 781.0
offset_bottom = 186.0

[node name="Question" type="PanelContainer" parent="HBoxContainer"]
modulate = Color(0.925353, 0.925353, 0.925353, 1)
custom_minimum_size = Vector2(655, 48)
layout_mode = 2
theme = ExtResource("3_l0jdm")

[node name="llm_input" type="TextEdit" parent="HBoxContainer/Question"]
custom_minimum_size = Vector2(630, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_l0jdm")
theme_override_colors/caret_background_color = Color(0, 0, 0, 1)
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
"
wrap_mode = 1
caret_blink = true
caret_multiple = false
script = ExtResource("6_b8ddn")
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_l0jdm")
text = "Send"

[node name="Button2" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_l0jdm")
text = "Close"

[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
